--- a/nws-laser-formations/package.json
+++ b/nws-laser-formations/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.13.2",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
+    "pdfkit": "^0.17.0",
     "postcss": "^8.4.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
